# repertoire

./: .env  .gitignore  CHANGELOG.md  MUSICBRAINZ_GUIDE.md  RAYCAST_DEVELOPMENT.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  repertoire.db  requirements.txt
.github/workflows/: extension-tests.yml  python-tests.yml
repertoire/: README.md  __init__.py  cli.py  database.py  discogs.py  llm.py  models.py  musicbrainz.py  parser.py  scraper.py
src/: browse-collection.ts  scrape-musicalifeiten.tsx
src/repertoire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_database.py  test_discogs.py  test_musicbrainz.py  test_parser.py  test_scraper.py
webui/: app.py
webui/static/: app.js  style.css
webui/templates/: add-recording.html  index.html  recording-detail.html
